# ZHMModSDK

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.dist.txt  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CMakeUserPresets.json-epic_sample  CMakeUserPresets.json-steam_sample  Folder.DotSettings  INSTALL-deck.md  LICENSE  README.md  flake.nix  launch.vs.json-epic_sample  launch.vs.json-legendary_sample  launch.vs.json-steam_sample  vcpkg.json
DirectInputProxy/: CMakeLists.txt
DirectInputProxy/Src/: DirectInputProxy.cpp
Mods/AdvancedRating/: CMakeLists.txt
Mods/AdvancedRating/Src/: AdvancedRating.cpp  AdvancedRating.h  json.hpp
Mods/CertPinBypass/: CMakeLists.txt
Mods/CertPinBypass/Src/: CertPinBypass.cpp  CertPinBypass.h
Mods/Clumsy/: CMakeLists.txt  README.md
Mods/Clumsy/Smf/: README  manifest.json
Mods/Clumsy/Src/: Clumsy.cpp  Clumsy.h
Mods/DebugMod/: CMakeLists.txt
Mods/DebugMod/Src/: DebugMod.cpp  DebugMod.h
Mods/DebugMod/Src/UI/: AssetsBox.cpp  EntityBox.cpp  ItemsBox.cpp  NPCsBox.cpp  PlayerBox.cpp  PositionBox.cpp  SceneBox.cpp
Mods/DiscordRichPresence/: CMakeLists.txt  README.md
Mods/DiscordRichPresence/Src/: DiscordClient.cpp  DiscordClient.h  DiscordRichPresence.cpp  DiscordRichPresence.h  DiscordRpc.cpp  DiscordRpc.h
Mods/Editor/: CMakeLists.txt  README.md  editor-client.ts  editor.d.ts
Mods/Editor/Smf/: README  manifest.json
Mods/Editor/Src/: Editor.cpp  Editor.h  EditorServer.cpp  EditorServer.h  EntityNameCompare.h  EntityTreeNode.h  JsonHelpers.h  NavKit.h
Mods/Editor/Src/Components/: Actors.cpp  Assets.cpp  DebugChannels.cpp  EditorAPI.cpp  EntityManipulator.cpp  EntityProperties.cpp  EntityTree.cpp  Items.cpp  Library.cpp  PinTracer.cpp  Qne.cpp  Qne.h  Rooms.cpp
Mods/Editor/Src/Properties/: Array.cpp  Color.cpp  Common.cpp  Enum.cpp  Matrix.cpp  Primitives.cpp  Resource.cpp  Vectors.cpp
Mods/Editor/qnc/: Cargo.toml  build.rs
Mods/Editor/qnc/src/: lib.rs
Mods/FreeCam/: CMakeLists.txt  README.md
Mods/FreeCam/Src/: FreeCam.cpp  FreeCam.h
Mods/FreelancerSeeder/: CMakeLists.txt
Mods/FreelancerSeeder/src/: FreelancerSeeder.cpp  FreelancerSeeder.h
Mods/Hitmen/: CMakeLists.txt
Mods/Hitmen/Smf/: manifest.json
Mods/Hitmen/Src/: BinaryStreamReader.h  BinaryStreamWriter.h  Hitmen.cpp  Hitmen.h
Mods/MaxPatchLevel/: CMakeLists.txt
Mods/MaxPatchLevel/Src/: MaxPatchLevel.cpp  MaxPatchLevel.h
Mods/NoPause/: CMakeLists.txt
Mods/NoPause/Src/: NoPause.cpp  NoPause.h
Mods/OnlineTools/: CMakeLists.txt
Mods/OnlineTools/src/: OnlineTools.cpp  OnlineTools.h
Mods/SkipIntro/: CMakeLists.txt
Mods/SkipIntro/Src/: SkipIntro.cpp  SkipIntro.h
Mods/WakingUpNpcs/: CMakeLists.txt
Mods/WakingUpNpcs/Src/: WakingUpNpcs.cpp  WakingUpNpcs.h
Mods/World/: CMakeLists.txt
Mods/World/Src/: World.cpp  World.h
Tools/DevLoader/: CMakeLists.txt
Tools/DevLoader/Src/: Main.cpp
ZHMGlacierSDK/: CMakeLists.txt
ZHMGlacierSDK/Include/: CompileReflection.h  Crc32.h  EUpdateMode.h  Enums.h  Reflection.h  TArray.h  THashMap.h  TMap.h  TPair.h  ZActor.h  ZDelegate.h  ZEntity.h  ZGameLoopManager.h  ZGameStats.h  ZGameTime.h  ZHM5BaseCharacter.h  ZHitman5.h  ZHttp.h  ZKnowledge.h  ZMemory.h  ZObject.h  ZPrimitives.h  ZResourceID.h  ZString.h  ZTypeRegistry.h
ZHMGlacierSDK/Src/: ZActor.cpp  ZObject.cpp
ZHMModSDK/: CMakeLists.txt  ModSDKVersion.h.in  ZHMModSDK.rc.in
ZHMModSDK/Include/: 7zUtil.h  Common.h  Crypto.h  D3DUtils.h  EngineFunction.h  EventDispatcher.h  Events.h  Functions.h  Globals.h  Hook.h  Hooks.h  IModSDK.h  IPluginInterface.h  IRenderer.h  ISetting.h  Logging.h  NavPower.h  Pins.h  Scaleform.h  ZBinaryReader.h  ZHMPin.h
ZHMModSDK/Include/Glacier/: CompileReflection.h  EDebugChannel.h  EDynamicEntityType.h  EUpdateMode.h  EntityFactory.h  Enums.h  Hash.h  IComponentInterface.h  IEnumType.h  ISavable.h  MDF_FONT.h  Pins.h  Prim.h  Reflection.h  SColorRGB.h  SColorRGBA.h  SExternalReferences.h  SGameUpdateEvent.h  SOnlineEvent.h  SReasoningGrid.h  TAlignedType.h  TArray.h  TBinaryTree.h  TCheatProtect.h  THashMap.h  THashSet.h  TIterator.h  TList.h  TMap.h  TPair.h  TRedBlackTree.h  TSet.h  TSharedPointer.h  ZAIAreaEntity.h  ZAIGameState.h  ZAction.h  ZActor.h  ZApplication.h  ZApplicationEngineWin32.h  ZBehavior.h  (+73 more)
ZHMModSDK/Include/IO/: ZBinaryDeserializer.h  ZBinaryReader.h  ZBinaryWriter.h
ZHMModSDK/Include/Rendering/: FrustumCuller.h  ViewFrustum.h
ZHMModSDK/Include/Util/: ImGuiUtils.h  ResourceUtils.h  StringUtils.h
ZHMModSDK/Rust/: Cargo.toml
ZHMModSDK/Rust/src/: lib.rs
ZHMModSDK/Src/: DebugConsole.cpp  DebugConsole.h  EngineFunctionImpl.h  EventDispatcherImpl.h  Events.cpp  Failures.h  Functions.cpp  Globals.cpp  GlobalsImpl.h  HookImpl.h  Hooks.cpp  Logging.cpp  Main.cpp  ModConfig.cpp  ModConfig.h  ModLoader.cpp  ModLoader.h  ModSDK.cpp  ModSDK.h  ModSettings.cpp  ModSettings.h  NavMesh.cpp  NavPower.cpp  PinRegistry.cpp  PinRegistry.h  ResourceLoading.cpp
ZHMModSDK/Src/Glacier/: MDF_FONT.cpp  ZActor.cpp  ZConfigCommand.cpp  ZEntity.cpp  ZMath.cpp  ZObject.cpp  ZPrimitives.cpp  ZResource.cpp  ZString.cpp
ZHMModSDK/Src/IO/: ZBinaryDeserializer.cpp
ZHMModSDK/Src/Multiplayer/: Lobby.cpp  Lobby.h  SDKSocketOverride.cpp  SDKSocketOverride.h
ZHMModSDK/Src/Rendering/: CustomPrimitiveBatch.cpp  CustomPrimitiveBatch.h  D3D12DXGIFactory.cpp  D3D12DXGIFactory.h  D3D12Device.cpp  D3D12Device.h  D3D12Hooks.cpp  D3D12Hooks.h  D3D12Renderer.cpp  D3D12Renderer.h  D3D12SwapChain.cpp  D3D12SwapChain.h  D3DUtils.h  DebugEffect.cpp  DebugEffect.h  FrustumCuller.cpp  ImguiRenderer.cpp  ImguiRenderer.h  ViewFrustum.cpp  ViewFrustum.h
ZHMModSDK/Src/Rendering/Renderers/: DirectXTKRenderer.cpp  DirectXTKRenderer.h  Fonts.h  ImGuiImpl.cpp  ImGuiImpl.h  ImGuiRenderer.cpp  ImGuiRenderer.h
ZHMModSDK/Src/UI/: Console.cpp  Console.h  MainMenu.cpp  MainMenu.h  ModSelector.cpp  ModSelector.h
ZHMModSDK/Src/Util/: FileUtils.cpp  FileUtils.h  HashingUtils.cpp  HashingUtils.h  MsvcStringIntrinsics.cpp  ProcessUtils.cpp  ProcessUtils.h  StringUtils.cpp  StringUtils.h
(+85 files in other folders)
