[package]
name = "qnc"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[build-dependencies]
cbindgen = "0.29.0"

[dependencies]
quickentity-rs = { git = "https://github.com/atampy25/quickentity-rs.git", rev = "36960321fd976a473ad887c503fa87140a637042" }
serde_path_to_error = "0.1.14"
serde_json = { version = "1.0.81", features = ["preserve_order"] }